stylesheets/main.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
  font-weight: 300;
  /* overflow: hidden; */
  /* border: 1px solid red; */
}

body {
  position: relative;
  display: block;
  background: white;
  min-width: 100vw;
  min-height: 100vh;
}

.main_flexbox__container {
  position: relative;
  display: block;
  min-width: 100vw;
  min-height: 100vh;
}

.main__flexbox {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
}
@media only screen and (max-width: 992px) {
  .main__flexbox {
    flex-direction: column;
  }
}

.main_flexbox__item1 {
  width: 45vw;
  height: 100vh;
}
@media only screen and (max-width: 992px) {
  .main_flexbox__item1 {
    width: 100vw;
    height: 60vh;
  }
}
@media only screen and (max-width: 451px) {
  .main_flexbox__item1 {
    width: 100vw;
    height: 70vh;
  }
}

.main_flexbox__item2 {
  width: 55vw;
  max-height: 100vh;
}
@media only screen and (max-width: 992px) {
  .main_flexbox__item2 {
    width: 100vw;
    height: 40vh;
  }
}
@media only screen and (max-width: 451px) {
  .main_flexbox__item2 {
    width: 100vw;
    height: 70vh;
  }
}

.form_container {
  width: 45vw;
  height: 100vh;
  background: #0096f0;
}
@media only screen and (max-width: 992px) {
  .form_container {
    width: 100vw;
    height: 60vh;
  }
}
@media only screen and (max-width: 451px) {
  .form_container {
    width: 100vw;
    height: 70vh;
  }
}

.comment_box__logo_flexbox {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
}
@media only screen and (max-width: 992px) {
  .comment_box__logo_flexbox {
    flex-direction: row;
  }
}

.comment_box__logo {
  width: 50%;
  height: auto;
  max-height: 70vh;
  margin: 0 25%;
}
@media only screen and (max-width: 992px) {
  .comment_box__logo {
    display: none;
  }
}

.comment_box__logo_small {
  display: none;
}
@media only screen and (max-width: 992px) {
  .comment_box__logo_small {
    display: block;
    width: 5rem;
    margin: 0.4rem;
  }
}
@media only screen and (max-width: 451px) {
  .comment_box__logo_small {
    display: block;
    width: 4rem;
    margin: 0.4rem;
  }
}

.comment_box__logo_text {
  margin: 0.25rem;
}

.comment_box__h1 {
  text-align: center;
  font-size: 3.2vw;
  font-weight: 400;
  color: #232330;
  line-height: 3.2vw;
}
@media only screen and (max-width: 992px) {
  .comment_box__h1 {
    font-size: 1.3rem;
    line-height: 1.3rem;
  }
}
@media only screen and (max-width: 451px) {
  .comment_box__h1 {
    font-size: 0.95rem;
    line-height: 0.95rem;
  }
}

.comment_box__h2 {
  text-align: center;
  font-size: 8vw;
  font-weight: 900;
  color: #232330;
  line-height: 6.5vw;
}
@media only screen and (max-width: 992px) {
  .comment_box__h2 {
    font-size: 3.2rem;
    line-height: 2.8rem;
  }
}
@media only screen and (max-width: 451px) {
  .comment_box__h2 {
    font-size: 2.3rem;
    line-height: 2.3rem;
  }
}

